# progetto_multimedia2024

./: README.md
node script/: index.js  package-lock.json  package.json
node script/public/: doc.html  index.html  info.html
node script/public/css/: bootstrap.css
node script/public/js/: home.js
node script/video/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.py  plot.py  videostab  videostab.cpp  videostabKalman  videostabKalman.cpp
node script/video/foo-gqYNau/: new_prev_to_cur_transformation.txt  smoothed_trajectory.txt
node script/video/foo-t2lnyT/: new_prev_to_cur_transformation.txt  prev_to_cur_transformation.txt  smoothed_trajectory.txt  trajectory.txt
